--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,6 @@ language: java
 script: ant main
 deploy:
   provider : heroku
+  app : theloneninja
   api_key: cd197f80-7201-4889-9c22-add189ab0619
   strategy: git
