--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,4 @@ deploy:
   provider : heroku
   app : theloneninja
   api_key: cd197f80-7201-4889-9c22-add189ab0619
+  heroku buildpacks:set https://github.com/heroku/heroku-buildpack-ruby
