--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,4 @@
 language: java 
 script: ant main
-mvn clean heroku:deploy-war
-deploy:
-  provider : heroku
-  app : theloneninja
-  api_key: cd197f80-7201-4889-9c22-add189ab0619
-  heroku buildpacks:set https://github.com/heroku/heroku-buildpack-ruby
+script: mvn clean heroku:deploy-war
+
