--- a/pom.xml
+++ b/pom.xml
@@ -1,19 +1,70 @@
-<project>
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
+                             http://maven.apache.org/maven-v4_0_0.xsd">
+  <modelVersion>4.0.0</modelVersion>
+  <groupId>com.loneninja.geo</groupId>
+  <artifactId>travis-the-lone-ninja</artifactId>
+  <version>0.1-SNAPSHOT</version>
+  <packaging>war</packaging>
+  <name>theloneninja</name>
+
+  <dependencies>
+    <dependency>
+      <groupId>org.apache.geronimo.specs</groupId>
+      <artifactId>geronimo-servlet_2.4_spec</artifactId>
+      <version>1.1.1</version>
+    </dependency>
+  </dependencies>
+
+  <pluginRepositories>
+    <pluginRepository>
+      <id>rubygems-releases</id>
+      <url>http://rubygems-proxy.torquebox.org/releases</url>
+    </pluginRepository>
+  </pluginRepositories>
+
   <build>
-      <plugins>
-        <build>
-          <plugins>
-            <plugin>
-              <groupId>com.heroku.sdk</groupId>
-              <artifactId>heroku-maven-plugin</artifactId>
-              <version>0.4.4</version>
-              <configuration>
-                <appName>theloneninja</appName>
-              </configuration>
-            </plugin>
-          </plugins>
-        </build>
+    <finalName>travis-heroku-lone-ninja</finalName>
+    <plugins>
+      <plugin>
+        <groupId>com.heroku.sdk</groupId>
+        <artifactId>heroku-maven-plugin</artifactId>
+        <version>0.4.4</version>
       </plugin>
     </plugins>
+
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>de.saumya.mojo</groupId>
+          <artifactId>gem-maven-plugin</artifactId>
+          <version>1.0.5</version>
+          <configuration>
+            <execArgLines>
+              <execArgLine>${project.build.directory}/rubygems/bin/travis</execArgLine>
+              <execArgLine>encrypt</execArgLine>
+              <execArgLine>HEROKU_API_KEY=${herokuApiKey}</execArgLine>
+            </execArgLines>
+          </configuration>
+          <dependencies>
+            <dependency>
+              <groupId>rubygems</groupId>
+              <artifactId>travis</artifactId>
+              <version>1.7.1</version>
+              <type>gem</type>
+            </dependency>
+            <dependency>
+              <groupId>rubygems</groupId>
+              <artifactId>pry</artifactId>
+              <version>0.9.12.6</version>
+              <type>gem</type>
+            </dependency>
+          </dependencies>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+
   </build>
 </project>
