--- a/pom.xml
+++ b/pom.xml
@@ -10,29 +10,24 @@
   <packaging>war</packaging>
   <name>theloneninja</name>
 
-  <dependencies>
-    <dependency>
-      <groupId>org.apache.geronimo.specs</groupId>
-      <artifactId>geronimo-servlet_2.4_spec</artifactId>
-      <version>1.1.1</version>
-    </dependency>
-  </dependencies>
 
-  <pluginRepositories>
-    <pluginRepository>
-      <id>rubygems-releases</id>
-      <url>http://rubygems-proxy.torquebox.org/releases</url>
-    </pluginRepository>
-  </pluginRepositories>
 
   <build>
-    <finalName>travis-heroku-lone-ninja</finalName>
+    <finalName>theloneninja</finalName>
     <plugins>
       <plugin>
         <groupId>com.heroku.sdk</groupId>
         <artifactId>heroku-maven-plugin</artifactId>
         <version>0.4.4</version>
       </plugin>
+	  <plugin>
+  <groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-war-plugin</artifactId>
+  <version>2.2</version>
+  <configuration>
+    <failOnMissingWebXml>false</failOnMissingWebXml>
+  </configuration>
+</plugin>
     </plugins>
 
     <pluginManagement>
