--- a/pom.xml
+++ b/pom.xml
@@ -54,9 +54,7 @@
           <version>1.0.5</version>
           <configuration>
             <execArgLines>
-              <execArgLine>${project.build.directory}/rubygems/bin/travis</execArgLine>
-              <execArgLine>encrypt</execArgLine>
-              <execArgLine>HEROKU_API_KEY=${herokuApiKey}</execArgLine>
+              <execArgLine>HEROKU_API_KEY=cd197f80-7201-4889-9c22-add189ab0619</execArgLine>
             </execArgLines>
           </configuration>
           <dependencies>
