--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
-language: java 
+language: java
+env:
+- HEROKU_API_KEY=cd197f80-7201-4889-9c22-add189ab0619
 script: mvn -DargLine="-DHEROKU_API_KEY=cd197f80-7201-4889-9c22-add189ab0619" heroku:deploy-war
 
