--- a/pom.xml
+++ b/pom.xml
@@ -36,12 +36,11 @@
                 <appName>theloneninja</appName>
               </configuration>
             </plugin>
-	  <plugin>
+			<plugin>            
   <groupId>org.apache.maven.plugins</groupId>
   <artifactId>maven-war-plugin</artifactId>
-  <version>2.2</version>
   <configuration>
-    <failOnMissingWebXml>false</failOnMissingWebXml>
+    <webXml>src/main/webapp/WEB-INF/web.xml</webXml>        
   </configuration>
 </plugin>
     </plugins>
